Bug 169311 - Grid points are sometimes displayed in a duplicated manner in Writer
Summary: Grid points are sometimes displayed in a duplicated manner in Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Grid-Helplines
  Show dependency treegraph
 
Reported: 2025-11-07 06:53 UTC by Tamás Zolnai
Modified: 2025-11-12 10:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screen recording showing the issue (2.56 MB, video/mp4)
2025-11-07 06:54 UTC, Tamás Zolnai
Details
Zoomed in screenshot, showing two-pixel "lines". (1.38 KB, image/png)
2025-11-07 06:55 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2025-11-07 06:53:41 UTC
Description:
In Writer, the grid consists of one-pixel dots.

However, in some cases, instead of a one-pixel dot, I see two pixel "lines". It looks like the rendering draws some dots twice with a small difference in their position.

Steps to Reproduce:
1. Open Writer
2. Display grid
   * View -> Grid and Helplines -> Display Grid
3. Set zoom level to 160%
4. Scroll up and down on the first page with the mouse scroll.

Actual Results:
Some points are displayed as two-pixel lines.

Expected Results:
Points of the grid should be displayed consistently as a one-pixel dot.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.1.1 (X86_64) / LibreOffice Community
Build ID: 580(Build:1)
CPU threads: 4; OS: Linux 6.16; UI render: default; VCL: kf6 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Tamás Zolnai 2025-11-07 06:54:36 UTC
Created attachment 203792 [details]
Screen recording showing the issue

A bit hart to see the problem on the screen recording, because we are speaking about one pixel differences.
Comment 2 Tamás Zolnai 2025-11-07 06:55:51 UTC
Created attachment 203793 [details]
Zoomed in screenshot, showing two-pixel "lines".
Comment 3 Commit Notification 2025-11-10 12:55:35 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b3ea96543b61a02017350fecae53b4c6637915a9

tdf#169311: Improve accuracy of rendering of grid points in Writer.

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.